# 3D-Human-Pose-Estimation

./: .gitignore  README.md
ML/: LSTM_AE.ipynb
MLProcessing/: ConvertPoints.py  FuseRGBDepth.py  LSTM.py  keypoints5.npy  keypoints5.txt
custom_yolo/: custom-yolov4-detector.cfg  custom-yolov4-detector7.cfg  obj.names  obj7.names
openpose/: bad.list
openpose/examples/tutorial_api_cpp/: 10_asynchronous_custom_input.cpp  CMakeLists.txt
openpose/test3/: 1000_keypoints.json  1001_keypoints.json  1002_keypoints.json  1003_keypoints.json  1004_keypoints.json  1005_keypoints.json  1006_keypoints.json  1007_keypoints.json  1008_keypoints.json  1009_keypoints.json  1010_keypoints.json  1011_keypoints.json  1012_keypoints.json  1013_keypoints.json  1014_keypoints.json  1015_keypoints.json  1016_keypoints.json  1017_keypoints.json  1018_keypoints.json  1019_keypoints.json  1020_keypoints.json  1021_keypoints.json  1022_keypoints.json  1023_keypoints.json  1024_keypoints.json  1025_keypoints.json  1026_keypoints.json  1027_keypoints.json  1028_keypoints.json  1029_keypoints.json  1030_keypoints.json  1031_keypoints.json  1032_keypoints.json  1033_keypoints.json  1034_keypoints.json  1035_keypoints.json  1036_keypoints.json  1037_keypoints.json  1038_keypoints.json  1039_keypoints.json  (+773 more)
openpose/testo1/: 1000_keypoints.json  1002_keypoints.json  1003_keypoints.json  1004_keypoints.json  1005_keypoints.json  1007_keypoints.json  1008_keypoints.json  1012_keypoints.json  1016_keypoints.json  1018_keypoints.json  1021_keypoints.json  1022_keypoints.json  1023_keypoints.json  1024_keypoints.json  1027_keypoints.json  1031_keypoints.json  1033_keypoints.json  1036_keypoints.json  1037_keypoints.json  103_keypoints.json  1040_keypoints.json  1041_keypoints.json  1044_keypoints.json  1045_keypoints.json  1046_keypoints.json  1047_keypoints.json  1050_keypoints.json  1051_keypoints.json  1052_keypoints.json  1054_keypoints.json  1055_keypoints.json  1058_keypoints.json  105_keypoints.json  1061_keypoints.json  1063_keypoints.json  1065_keypoints.json  1066_keypoints.json  1067_keypoints.json  1070_keypoints.json  1071_keypoints.json  (+1035 more)
openpose/testo2/: 0_keypoints.json  1000_keypoints.json  1001_keypoints.json  1002_keypoints.json  1003_keypoints.json  1004_keypoints.json  1005_keypoints.json  1006_keypoints.json  1007_keypoints.json  1008_keypoints.json  1009_keypoints.json  100_keypoints.json  1010_keypoints.json  1011_keypoints.json  1012_keypoints.json  1013_keypoints.json  1014_keypoints.json  1015_keypoints.json  1016_keypoints.json  1017_keypoints.json  1018_keypoints.json  1019_keypoints.json  101_keypoints.json  1020_keypoints.json  1021_keypoints.json  1022_keypoints.json  1023_keypoints.json  1024_keypoints.json  1025_keypoints.json  1026_keypoints.json  1027_keypoints.json  1028_keypoints.json  1029_keypoints.json  102_keypoints.json  1030_keypoints.json  1031_keypoints.json  1032_keypoints.json  1033_keypoints.json  1034_keypoints.json  1035_keypoints.json  (+1074 more)
openpose/testo2new/: 0_keypoints.json  1000_keypoints.json  1001_keypoints.json  1002_keypoints.json  1003_keypoints.json  1004_keypoints.json  1005_keypoints.json  (+2220 more)
yolov4_darknet/: Makefile
(+2895 files in other folders)
